<resources>
    <string name="app_name">My ChatApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_sign_in">Sign In</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_btn">Login</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="tv_sign_up">Sign Up</string>
    <string name="user_name_hint">Username</string>
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="logout">LOGOUT</string>
    <string name="cancel">Cancel</string>
    <string name="from_device">from device</string>
    <string name="camera">camera</string>
</resources>